--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,12 @@
   "author": "Wasif Alam",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
