--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
