--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "a simple contact managing app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Wasif Alam",
   "license": "ISC",
